# coreflow-ai

./: .env.example  .gitignore  AGENTS.md  README-kor.md  README.md  main.py  pyproject.toml  requirements.txt  tmp_debug.py  tmp_rag.py  tmp_rag_loop.py  tmp_req.py
data/: parent_split_docs_20250909.csv  split_docs_20250904.csv  split_docs_20250909.csv
experiments/notebooks/: embedding.ipynb  embedding_and_save_to_chroma.ipynb  myserver_test.ipynb  myserver_test2.ipynb  ollama_test.ipynb  qwen3_test.ipynb  splitting.ipynb  splitting2.ipynb  splitting3.ipynb  test.ipynb
experiments/src/: gemma3_agent_test2.py  gpt_oss_20b_test.py  openai-agent-test_api.py  qwen3_agent_test.py  qwen_agent_lib_test.py  temp.py
notebooks/: LangChain_create_react_agent.ipynb  LangGraph.ipynb  agent_test.ipynb  agent_test2.py  embedding.ipynb  embedding_and_save_to_chroma.ipynb  geocode_and_forecast.ipynb  invoke_test.ipynb  myserver_test.ipynb  myserver_test2.ipynb  myserver_test3.ipynb  ollama_test.ipynb  openai-agent-test.ipynb  retrieve_test.ipynb  splitting.ipynb  splitting2.ipynb  splitting3.ipynb  temp.py  test.ipynb
src/: gemma3_agent_api.py  ollama_api.py  openai-agent-test.py  openai_agent_api.py  rag_api.py
src/agents/: gpt_oss_20b_agent_api.py
src/agents/mcp/: server.py
