[project]
name = "finalprojectaiworkspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langsmith>=0.4.27",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.14.0",
    "openai>=1.107.1",
    "openai-agents>=0.3.0",
    "posthog==5.4.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.35.0",
]
